# fountain_raptor_10

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: degree_gen_example.rs  k4_message_degree_sets.rs  random_gen_example.rs  test_raptor_10.rs  test_raptor_10_multi_threads.rs
src/: cached_R10HDPC.rs  lib.rs  raptor_10.rs
src/generator/: degree_generator.rs  mod.rs  random_generator.rs  rfc5053_degree_set.rs  triple_generator.rs
